--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -61,7 +61,8 @@
             _model = new UpdateTeamRequest
             {
                 Name = team.Name,
-                LogoUrl = team.LogoUrl
+                LogoUrl = team.LogoUrl,
+                Abbreviation = team.Abbreviation
             };
         }
     }
