--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/UpcomingRoundsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/UpcomingRoundsTile.razor
@@ -101,7 +101,7 @@
         _touchStartX = e.Touches[0].ClientX;
     }
 
-    private void HandleTouchMove(TouchEventArgs e)
+    private static void HandleTouchMove(TouchEventArgs e)
     {
 
     }
@@ -111,40 +111,40 @@
         var touchEndX = e.ChangedTouches[0].ClientX;
         var diffX = _touchStartX - touchEndX;
 
-        if (Math.Abs(diffX) > 50)
-        {
-            if (diffX > 0)
-                ShowNext();
-            else
-                ShowPrevious();
-        }
+        if (!(Math.Abs(diffX) > 50))
+            return;
+
+        if (diffX > 0)
+            ShowNext();
+        else
+            ShowPrevious();
     }
 
     private void GoToSlide(int index)
     {
-        if (index >= 0 && index < NumberOfDots)
-        {
-            _currentIndex = index;
-            UpdateTrackStyle();
-        }
+        if (index < 0 || index >= NumberOfDots) 
+            return;
+
+        _currentIndex = index;
+        UpdateTrackStyle();
     }
 
     private void ShowPrevious()
     {
-        if (_currentIndex > 0)
-        {
-            _currentIndex--;
-            UpdateTrackStyle();
-        }
+        if (_currentIndex <= 0) 
+            return;
+
+        _currentIndex--;
+        UpdateTrackStyle();
     }
 
     private void ShowNext()
     {
-        if (!IsAtEnd())
-        {
-            _currentIndex++;
-            UpdateTrackStyle();
-        }
+        if (IsAtEnd()) 
+            return;
+
+        _currentIndex++;
+        UpdateTrackStyle();
     }
 
     private void UpdateTrackStyle()
@@ -157,11 +157,5 @@
     {
         var roundsPerPage = _isDesktop ? 2 : 1;
         return _currentIndex >= DashboardState.UpcomingRounds.Count - roundsPerPage;
-    }
-
-    public ValueTask DisposeAsync()
-    {
-        DashboardState.OnStateChange -= StateHasChanged;
-        return ValueTask.CompletedTask;
     }
 }
