--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/RoundResultsTile.razor
@@ -177,31 +177,31 @@
     }
 
     private void HandleTouchStart(TouchEventArgs e) => _touchStartX = e.Touches[0].ClientX;
-    private void HandleTouchMove(TouchEventArgs e) { }
+    private static void HandleTouchMove(TouchEventArgs e) { }
     private void HandleTouchEnd(TouchEventArgs e)
     {
         var touchEndX = e.ChangedTouches[0].ClientX;
         var diffX = _touchStartX - touchEndX;
 
-        if (Math.Abs(diffX) > 50)
+        if (!(Math.Abs(diffX) > 50))
+            return;
+
+        if (diffX > 0)
         {
-            if (diffX > 0)
-            {
-                if (_currentIndex < State.CurrentRoundMatches.Count - 1)
-                {
-                    _currentIndex++;
-                    UpdateTrackStyle();
-                }
-            }
-            else
-            {
-                if (_currentIndex > 0)
-                {
-                    _currentIndex--;
-                    UpdateTrackStyle();
-                }
-            }
+            if (_currentIndex >= State.CurrentRoundMatches.Count - 1) 
+                return;
+
+            _currentIndex++;
         }
+        else
+        {
+            if (_currentIndex <= 0) 
+                return;
+
+            _currentIndex--;
+        }
+
+        UpdateTrackStyle();
     }
 
     private void GoToSlide(int index)
