--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Prizes.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Prizes.razor
@@ -236,5 +236,5 @@
         return Http.PostAsJsonAsync($"api/leagues/{LeagueId}/prizes", request);
     }
 
-    protected void Back() => NavigationManager.NavigateTo("/leagues");
+    private void Back() => NavigationManager.NavigateTo("/leagues");
 }
