--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
@@ -68,6 +68,7 @@
     justify-content: center;
     width: 24px;
     height: 24px;
+    min-width: 24px;
     border-radius: 50%;
     font-size: 12px;
     background-color: white;
@@ -146,6 +147,14 @@
         font-size: 0.6em;
         padding: 0px 10px 0px 0px;
     }
+
+        .badge-group.prediction-badge {
+            font-size: 0.9em;
+        }
+
+        .badge-group .badge-icon {
+            font-size: 1em;
+        }
 
     .badge-icon {
         font-size: 1.1em;
