--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
@@ -47,7 +47,7 @@
                 @if (IsChasing)
                 {
                     <button class="btn purple-accent-button" disabled>
-                        <span class="spinner-border spinner-border-s me-2" role="status" aria-hidden="true"></span>Sending...
+                        <span class="bi spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>Sending...
                     </button>
                 }
                 else
