--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
@@ -23,7 +23,7 @@
                             <div class="d-flex align-items-center">
                                 <img src="@match.HomeTeamLogoUrl" class="match-logo-small" alt="@match.HomeTeamName Logo"/>
                                 <span class="mx-2 d-sm-none">@match.HomeTeamAbbreviation v @match.AwayTeamAbbreviation</span>
-                                <span class="mx-2 d-none d-sm-block">@match.HomeTeamName v @match.AwayTeamName</span>
+                                <span class="mx-2 d-none d-sm-block">@match.HomeTeamAbbreviation v @match.AwayTeamAbbreviation</span>
                                 <img src="@match.AwayTeamLogoUrl" class="match-logo-small" alt="@match.AwayTeamName Logo"/>
                             </div>
                         </td>
