--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
@@ -88,7 +88,7 @@
                             else if (round.Id == _firstPublishedRoundId && _isChasing)
                             {
                                 <button class="btn purple-accent-button" disabled>
-                                    <span class="spinner-border spinner-border-s me-2" role="status" aria-hidden="true"></span>Sending...
+                                    <span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>Sending...
                                 </button>
                             }
 
