--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -35,16 +35,24 @@
                     </div>
                 </div>
 
-                <div class="mb-3">
-                    <label for="startDate" class="form-label text-white">Start Date</label>
-                    <InputDate id="startDate" class="form-control" @bind-Value="_model.StartDate" />
-                    <StyledValidationMessage For="@(() => _model.StartDate)" />
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="startDate" class="form-label text-white">Start Date</label>
+                        <InputDate id="startDate" class="form-control" @bind-Value="_model.StartDate" />
+                        <StyledValidationMessage For="@(() => _model.StartDate)" />
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="endDate" class="form-label text-white">End Date</label>
+                        <InputDate id="endDate" class="form-control" @bind-Value="_model.EndDate" />
+                        <StyledValidationMessage For="@(() => _model.EndDate)" />
+                    </div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="endDate" class="form-label text-white">End Date</label>
-                    <InputDate id="endDate" class="form-control" @bind-Value="_model.EndDate" />
-                    <StyledValidationMessage For="@(() => _model.EndDate)" />
+                    <label for="apiLeagueId" class="form-label text-white">API League ID</label>
+                    <InputNumber id="apiLeagueId" class="form-control" @bind-Value="_model.ApiLeagueId" />
+                    <StyledValidationMessage For="@(() => _model.ApiLeagueId)" />
                 </div>
             </ChildContent>
         </BaseFormComponent>
