--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -30,7 +30,13 @@
                         <InputText id="name" class="form-control" @bind-Value="_model.Name" />
                         <StyledValidationMessage For="@(() => _model.Name)" />
                     </div>
-                    
+
+                    <div class="mb-3">
+                        <label for="short-name" class="form-label text-white">Short Name</label>
+                        <InputText id="short-name" class="form-control" @bind-Value="_model.ShortName" />
+                        <StyledValidationMessage For="@(() => _model.ShortName)" />
+                    </div>
+
                     <div class="mb-3">
                         <label for="abbreviation" class="form-label text-white">Abbreviation (3 letters)</label>
                         <InputText id="abbreviation" class="form-control" @bind-Value="_model.Abbreviation" />
@@ -38,9 +44,15 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="logoUrl" class="form-label text-white">Logo URL</label>
-                        <InputText id="logoUrl" class="form-control" @bind-Value="_model.LogoUrl" />
+                        <label for="logo-url" class="form-label text-white">Logo URL</label>
+                        <InputText id="logo-url" class="form-control" @bind-Value="_model.LogoUrl" />
                         <StyledValidationMessage For="@(() => _model.LogoUrl)" />
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="api-team-id" class="form-label text-white">API Team ID</label>
+                        <InputNumber id="api-team-id" class="form-control" @bind-Value="_model.ApiTeamId" />
+                        <StyledValidationMessage For="@(() => _model.ApiTeamId!)" />
                     </div>
                 </ChildContent>
             </BaseFormComponent>
@@ -61,8 +73,10 @@
             _model = new UpdateTeamRequest
             {
                 Name = team.Name,
+                ShortName = team.ShortName,
                 LogoUrl = team.LogoUrl,
-                Abbreviation = team.Abbreviation
+                Abbreviation = team.Abbreviation,
+                ApiTeamId = team.ApiTeamId    
             };
         }
     }
