--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -32,7 +32,7 @@
                                         <div class="card-header w-100">
                                             <h5 class="card-title text-white fw-bold centre mb-0">@month.Name</h5>
                                         </div>
-                                        <div class="league-card-body justify-start w-100">
+                                        <div class="league-card-body justify-start w-100 inner-card">
                                             @if (_leaderboards.TryGetValue(month.Month, out var leaderboard))
                                             {
                                                 @if (leaderboard.IsLoading)
