Set Up Automated Email Reminders

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/UpcomingRoundsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/UpcomingRoundsTile.razor
@@ -37,10 +37,7 @@
                         {
                             <div class="carousel-item-wrapper">
                                 <div class="carousel-item-content">
-                                    <RoundCard Round="round"
-                                               IsChasing="DashboardState.ChasingRoundId == round.Id"
-                                               OnChaseEmailsClicked="async id => await DashboardState.SendChaseEmailsAsync(id)"/>
-
+                                    <RoundCard Round="round" />
                                 </div>
                             </div>
                         }
